syntax = "proto3"; // 指定proto版本
package rokid.inner;     // 指定包名

option go_package = "hello";


service Hello3 {
	// 定义SayHello方法
	rpc SayHello3(HelloRequest) returns (HelloResponse) {}
}

// HelloRequest 请求结构
message HelloRequest {
    int32 id = 1;
    string name = 2;
    
}

// HelloResponse 响应结构
message HelloResponse {
    //bytes voice    = 1;
    string message = 1;
    map<string, string> options = 2;
}

